@@ -8,6 +8,7 @@ import org.hl7.fhir.dstu3.model.Consent;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 public class ConsentServiceImpl implements ConsentService {
     private final IGenericClient consentClient;
@@ -35,14 +36,14 @@ public class ConsentServiceImpl implements ConsentService {
                 consentResult.setConsentId(consent.getId());
                 consentResult.setPolicyType(ConsentResult.PolicyType.fromPolicyUrl(consent.getPolicyRule()));
                 return consentResult;
-            }).toList()
+            }).collect(Collectors.toList())
         );
     }
 
     private Bundle doConsentSearch(List<String> mbis){
         List<String> fullMbis = mbis.stream()
                 .map( mbi -> String.format("%s|%s", DPCIdentifierSystem.MBI.getSystem(), mbi) )
-                .toList();
+                .collect(Collectors.toList());
 
         return consentClient
             .search()
